fix running e2e tests commands